--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://toadsam:jjhh1144@@ajou-campus-foodmap.borxifs.mongodb.net
-DB_NAME: cluster_name
+MONGODB_URI=mongodb+srv://toadsam:jjhh1144%40@ajou-campus-foodmap.borxifs.mongodb.net
+DB_NAME=ajou-campus-foodmap
