서버허용 성공!

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://toadsam:jjhh1144%40@ajou-campus-foodmap.borxifs.mongodb.net
+MONGODB_URI=mongodb+srv://toadsam:jjhh1144%40@ajou-campus-foodmap.borxifs.mongodb.net/?retryWrites=true&w=majority&appName=ajou-campus-foodmap
 DB_NAME=ajou-campus-foodmap
